# jee_mains_pyqs_data_base

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  cache_op.py  data_manager.py  new.py  new2.py  pyproject.toml  requirements.txt  setup.py  test.py  test2.py  ui3.py
.github/workflows/: publish.yml
assets/: properties-of-inverse-trigonometric-functions(e5-base-v2).html
core/: __init__.py  cache.py  chapter.py  data_base.py  filter.py  pdfy.py  question.py
exam_goal_db/chem/: alcohols-phenols-and-ethers.json  aldehydes-ketones-and-carboxylic-acids.json  basics-of-organic-chemistry.json  biomolecules.json  chemical-bonding-and-molecular-structure.json  chemical-equilibrium.json  chemical-kinetics-and-nuclear-chemistry.json  chemistry-in-everyday-life.json  compounds-containing-nitrogen.json  coordination-compounds.json  d-and-f-block-elements.json  electrochemistry.json  environmental-chemistry.json  gaseous-state.json  haloalkanes-and-haloarenes.json  hydrocarbons.json  hydrogen.json  ionic-equilibrium.json  isolation-of-elements.json  p-block-elements.json  periodic-table-and-periodicity.json  polymers.json  practical-organic-chemistry.json  redox-reactions.json  s-block-elements.json  salt-analysis.json  solid-state.json  solutions.json  some-basic-concepts-of-chemistry.json  structure-of-atom.json  surface-chemistry.json  thermodynamics.json
exam_goal_db/maths/: 3d-geometry.json  application-of-derivatives.json  area-under-the-curves.json  binomial-theorem.json  circle.json  complex-numbers.json  definite-integration.json  (+25 more)
tests/: test_basic.py
(+37 files in other folders)
