[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jee_data_base"
version = "0.2.1.post1"
description = "JEE Mains PYQS data base"
authors = [{ name="HostServer001", email="jarvisuserbot@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "playwright>=1.56.0",
    "hdbscan>=0.8.40",
    "numpy>=2.3.3",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "PyPDF2>=3.0.1",
    "beautifulsoup4>=4.14.2"
]

requires-python = ">=3.11"

[tool.setuptools]
include-package-data = true
